--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "gatsby-plugin-sharp": "^2.6.2",
     "gatsby-plugin-typography": "^2.5.1",
     "gatsby-remark-copy-linked-files": "^2.3.2",
+    "gatsby-remark-footnotes": "0.0.7",
     "gatsby-remark-images": "^3.3.2",
+    "gatsby-remark-numbered-footnotes": "^1.0.1",
     "gatsby-remark-prismjs": "^3.5.1",
     "gatsby-remark-responsive-iframe": "^2.4.2",
     "gatsby-remark-smartypants": "^2.3.1",
