--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/typography": "^0.16.3",
     "gatsby": "^2.21.22",
     "gatsby-image": "^2.4.3",
+    "gatsby-plugin-disqus": "^1.1.4",
     "gatsby-plugin-feed": "^2.5.1",
     "gatsby-plugin-google-analytics": "^2.3.1",
     "gatsby-plugin-offline": "^3.2.1",
