--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@types/react-helmet": "^6.0.0",
     "@types/typography": "^0.16.3",
+    "disqus-react": "^1.0.8",
     "gatsby": "^2.21.22",
     "gatsby-image": "^2.4.3",
     "gatsby-plugin-feed": "^2.5.1",
