--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
   "version": "0.0.0",
   "author": "Youjin",
   "dependencies": {
+    "@emotion/core": "^10.0.28",
+    "@emotion/styled": "^10.0.27",
     "@types/react-helmet": "^6.0.0",
     "@types/typography": "^0.16.3",
     "disqus-react": "^1.0.8",
     "gatsby": "^2.21.22",
     "gatsby-image": "^2.4.3",
+    "gatsby-plugin-emotion": "^4.3.2",
     "gatsby-plugin-feed": "^2.5.1",
     "gatsby-plugin-google-analytics": "^2.3.1",
     "gatsby-plugin-offline": "^3.2.1",
