--- a/package.json
+++ b/package.json
@@ -33,12 +33,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-helmet": "^5.2.1",
-    "react-typography": "^0.16.19",
-    "typeface-merriweather": "0.0.72",
-    "typeface-montserrat": "0.0.75",
-    "typography": "^0.16.19",
-    "typography-theme-stern-grove": "^0.16.19"
+    "react-helmet": "^5.2.1"
   },
   "devDependencies": {
     "@types/react": "^16.9.35",
