--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "disqus-react": "^1.0.8",
     "gatsby": "^2.21.22",
     "gatsby-image": "^2.4.3",
+    "gatsby-plugin-catch-links": "^2.3.4",
     "gatsby-plugin-emotion": "^4.3.2",
     "gatsby-plugin-feed": "^2.5.1",
     "gatsby-plugin-google-analytics": "^2.3.1",
